--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
-streamlit==1.37.1
-pandas==2.2.2
-pyyaml==6.0.2
-python-pptx==0.6.23
-numpy==1.26.4
+streamlit==1.36.0
+pandas>=2.0.0
+openpyxl>=3.1.2
+pyyaml>=6.0.0
+python-pptx>=0.6.22
+reportlab>=4.0.0
+Pillow>=10.0.0
+streamlit-lottie>=0.0.5
+
+openpyxl>=3.1.2
